--- a/css/projectStyle.css
+++ b/css/projectStyle.css
@@ -14,10 +14,16 @@
   text-align: left;
   padding-left: 15px;
   padding-right: 15px;
+  padding-bottom: 15px;
+}
+
+.name {
+  font-weight: bolder;
+  font-size: 20px;
 }
 
 @media (min-width: 415px) {
   .projects {
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
   }
 }
