--- a/css/contactStyle.css
+++ b/css/contactStyle.css
@@ -1,3 +1,14 @@
+:root {
+  --darkslategray: #2f4f4f;
+  --blanchedalmond: #ffebcd;
+  --black: #000000;
+  --powderblue: #b0e0e6;
+  --aquablue: #005f69;
+  --white: #ffffff;
+  --dimgray: #696969;
+  --darkgray: #a9a9a9;
+}
+
 /* Form code */
 .contact {
   text-align: center;
@@ -60,29 +71,29 @@ h1 {
   width: 50%;
   height: 30px;
   border-radius: 3px;
-  border: 1px solid var(--green);
+  border: 1px solid var(--black);
 }
 
 .btn-primary {
   margin-right: 5px;
-  color: azure;
-  background-color: cadetblue;
+  color: var(--white);
+  background-color: var(--aquablue);
 }
 
 .btn-primary:hover {
   color: var(--black);
-  background-color: dimgray;
-  border: 1px solid black;
+  background-color: var(--dimgray);
+  border: 1px solid var(--black);
 }
 
 .btn-secondary {
   margin-left: 0;
-  color: azure;
-  background-color: darkslategray;
+  color: var(--blanchedalmond);
+  background-color: var(--darkslategray);
 }
 
 .btn-secondary:hover {
-  color: black;
-  background-color: darkgray;
-  border: 1px solid black;
+  color: var(--black);
+  background-color: var(--darkgray);
+  border: 1px solid var(--black);
 }
