--- a/css/projectStyle.css
+++ b/css/projectStyle.css
@@ -1,3 +1,8 @@
+:root {
+  --black: #000000;
+  --powderblue: #b0e0e6;
+}
+
 .projects {
   display: grid;
   gap: 10px;
@@ -8,8 +13,8 @@
 
 .projectDescr {
   border-radius: 20px;
-  background-color: powderblue;
-  color: black;
+  background-color: var(--powderblue);
+  color: var(--black);
   height: auto;
   text-align: left;
   padding-left: 15px;
