--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+:root {
+  --darkslategray: #2f4f4f;
+  --blanchedalmond: #ffebcd;
+  --black: #000000;
+  --powderblue: #b0e0e6;
+  --aquablue: #005f69;
+  --white: #ffffff;
+}
+
 /* Nav code */
 nav {
   top: 0;
@@ -8,7 +17,8 @@ nav {
 
 .nav-list {
   display: flex;
-  flex: row wrap;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: flex-start;
   position: fixed;
   list-style-type: none;
@@ -16,7 +26,7 @@ nav {
   top: 0;
   margin: 0;
   padding: 0;
-  background-color: darkslategray;
+  background-color: var(--darkslategray);
 }
 
 .list-item {
@@ -28,16 +38,16 @@ nav {
   display: block;
   padding: 28px 16px;
   text-decoration: none;
-  color: blanchedalmond;
+  color: var(--blanchedalmond);
 }
 
 .nav-link:hover {
-  background-color: powderblue;
-  color: black;
+  background-color: var(--powderblue);
+  color: var(--black);
 }
 
 .nav-link:focus {
-  border-color: black;
+  border-color: var(--black);
 }
 
 /* header code */
@@ -45,8 +55,8 @@ nav {
   padding-top: 100px;
   padding-bottom: 20px;
   margin-bottom: 0px;
-  background-color: #005f69;
-  color: #ccbca4;
+  background-color: var(--aquablue);
+  color: var(--white);
   justify-content: center;
 }
 
@@ -64,8 +74,8 @@ header {
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: darkslategray;
-  color: blanchedalmond;
+  background-color: var(--aquablue);
+  color: var(--white);
   text-align: center;
   justify-content: center;
 }
@@ -82,7 +92,7 @@ footer {
 /* body code */
 body {
   margin: 0;
-  background-color: darkcyan;
+  background-color: var(--darkslategray);
 }
 
 main {
@@ -90,7 +100,7 @@ main {
   margin: 0px;
   margin-bottom: 75px;
   padding: 0px;
-  color: blanchedalmond;
+  color: var(--blanchedalmond);
 }
 
 .heading {
